--- a/turma2/motor-banco/pom.xml
+++ b/turma2/motor-banco/pom.xml
@@ -71,6 +71,20 @@
       <artifactId>jersey-media-moxy</artifactId>
       <version>2.7</version>
     </dependency>
+
+   <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.200</version>
+   </dependency>
+
+   <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-agroal</artifactId>
+      <version>5.4.18.Final</version>
+      <type>pom</type>
+   </dependency>
+
   </dependencies>
 
   <build>
